--- a/index.html
+++ b/index.html
@@ -5,8 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>UpperMost Games</title>
+    <link rel="stylesheet" href="css/master.css">
+    <style type="text/css">
+        @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+        *{margin:0;padding:0;box-sizing:border-box;}
+
+
+        html {
+            scroll-behavior: smooth;
+        }
+
+        body {
+          font-family: 'Roboto', sans-serif;
+          font-size: 14px;
+          background: #ccc;
+        }
+
+        header {
+          width: 100%;
+          height: 70px;
+          background: #333;
+          border-bottom: 1px solid #09f;
+          position: fixed;
+        }
+        nav ul {
+            float: right;
+            position: relative;
+            top: 8px;
+        }
+        nav ul li {
+            display: inline-block;
+            padding: 0 12px;
+            color: #fff;
+        }
+        nav ul li:hover {
+            color: #09f;
+            transition: linear .2s;
+        }
+        #discord {
+            width: 32px;
+            height: 32px;
+            background: url("../images/discordIcon.png");
+            background-position: center;
+            background-size: cover;
+            position: relative;
+            top: 10px;
+        }
+        #logo {
+            width: 64px;
+            height: 64px;
+            background: url("../images/logo.png");
+            background-position: center;
+            background-size: cover;
+            float: left;
+            position: relative;
+            top: 3px;
+        }
+        .content {
+            width: 1020px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
-    Teste
+    <header>
+        <nav>
+            <div class="content">
+            <figure id="logo"></figure>
+            <ul>
+                <a href="#"><li>Inicio</li></a>
+                <a href="#"><li>Sobre</li></a>
+                <a href="#"><li>Jogos</li></a>
+                <a href="#"><li>Contato</li></a>
+                <a href="https://discord.gg/UaUqtgP" target="_blank"><li><figure id="discord"></figure></li></a>
+            </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
